# teacher_agent

./: .gitignore  .mcp.json  CLAUDE.md  README.md  conversation.txt  conversation_dump.txt  conversation_dump_after.txt  pyproject.toml  record_stt.py
.claude/: settings.json
.notes/: teacher_performance_assessment_2026-03-22.md  teacher_performance_assessment_approach1_2026-03-22.md
.notes/richard/: DEFERRED_TASKS_ROADMAP.md  DEPLOYMENT_ROADMAP.md  GAP_ANALYSIS.md  PRODUCTION_ROADMAP.md  PROJECT_NOTES.md  SECURITY_AUDIT.md
archive/: pdf_to_audio.py  record_stt.py  teach.py
archive/__OLD_TKINTER__/: main.py  voice_pipeline.py
backend/: app_state.py  config.py  logging_config.py  main.py  token_tracker.py  usage_tracker.py
backend/db/: connection.py  migrate_v2.py  migrate_v3.py  models.py  schema.sql  util.py
backend/routers/: courses.py  internal.py  lessons.py  personas.py  usage.py  voices.py  ws_session.py
backend/services/: agent.py  code_runner.py  course_authoring.py  course_publish.py  realtime.py  stt.py  tts.py
client/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
client/src/: App.tsx  globals.css  vite-env.d.ts
frontend/: config.py  email.py  http_client.py  logging_config.py  main.py  rate_limiter.py  session_store.py  ws_logger.py
frontend/routers/: auth.py  courses.py  lessons.py  personas.py  sessions.py  usage.py  voices.py  ws_proxy.py
frontend/static/: index.html
scripts/: deploy.sh  provision.sh  ws_pentest.sh
shared/: __init__.py  audio.py  constants.py  lesson.py  pdf_tools.py  phonetics.py  stt.py  teaching_agent.py  tts.py  ui.py
storage/: db.sqlite3  db.sqlite3-shm  db.sqlite3-wal
tests/: conftest.py
(+133 files in other folders)
