[project]
name = "pdf-to-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "ipython>=9.11.0",
    "faster-whisper>=1.0.0",
    "kokoro>=0.9.4",
    "misaki[en]>=0.9.4",
    "openwakeword>=0.4.0",
    "piper-tts>=1.4.1",
    "pymupdf>=1.27.1",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.1",
    "pillow>=12.1.1",
    # server
    "fastapi[standard]>=0.115.0",
    "aiosqlite>=0.21.0",
    "httpx>=0.27.0",
    # auth
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "resend>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]
