[project]
name = "pdf-to-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "faster-whisper>=1.0.0",
    "kokoro>=0.9.4",
    "pymupdf>=1.27.1",
    "soundfile>=0.13.1",
    "pillow>=12.1.1",
    # server
    "fastapi[standard]>=0.115.0",
    "aiosqlite>=0.21.0",
    "httpx>=0.27.0",
    "websockets>=16.0",
    # auth
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "resend>=2.0.0",
    # spacy model required by kokoro/misaki G2P — installed as a wheel so pip is not needed at runtime
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
timeout = 30
